--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.9.0",
     "apexcharts": "^5.3.1",
+    "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
