--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-spinners": "^0.17.0",
     "yup": "^1.7.0"
   },
   "devDependencies": {
