--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
+    "moment-jalaali": "^0.10.4",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
