--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
+    "sweetalert2": "^11.22.3",
     "yup": "^1.7.0"
   },
   "devDependencies": {
