--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
@@ -17,6 +18,8 @@
     "apexcharts": "^5.3.1",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "ckeditor5": "^46.0.1",
+    "ckeditor5-premium-features": "^46.0.1",
     "formik": "^2.4.6",
     "moment-jalaali": "^0.10.4",
     "react": "^19.1.0",
