--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.9.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "apexcharts": "^5.3.1",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
@@ -28,8 +29,10 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-multi-date-picker": "^4.5.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
+    "redux": "^5.0.1",
     "sweetalert2": "^11.22.3",
     "yup": "^1.7.0"
   },
